[package]
name = "libsnpspice"
version = "0.1.0"
authors = ["Peter Schmidt-Nielsen <schmidtnielsenpeter@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
array-init = "0.1.1"
wasm-bindgen = "0.2.60"
once_cell = "1.3.1"
wee_alloc = "0.4.5"
console_error_panic_hook = "0.1.6"

[profile.release]
debug = true
